fix not showing cursor in timeline chrome

--- a/src/components/video/subtitle-timeline.sass
+++ b/src/components/video/subtitle-timeline.sass
@@ -57,6 +57,7 @@
                 grid-column: 1
 
             .user-time-cursor-wrapper
+                z-index: 2
                 cursor: pointer
 
                 .user-time-cursor
